//
// Copyright 2023 The Project Oak Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package oak.iree;

service Iree {
  // method_id: 0
  rpc Initialize(InitializeRequest) returns (InitializeResponse);
  // method_id: 1
  rpc Invoke(InvokeRequest) returns (InvokeResponse);
}

message InitializeRequest {}

message InitializeResponse {
  AttestationEvidence attestation_evidence = 1;
}

message AttestationEvidence {
  bytes attestation_report = 1;
  bytes public_key = 2;
}

message SessionId {
  bytes value = 1;
}

message InvokeRequest {
  SessionId session_id = 1;
  bytes body = 2;
}

message InvokeResponse {
  bytes body = 1;
}
